--- a/restaurant/reservation.html
+++ b/restaurant/reservation.html
@@ -65,61 +65,60 @@
               authentic Italian cuisine makes.
             </p>
           </section>
-        </div>
-      </div>
-
-      <div class="container">
-        <h3>Form</h3>
-        <form method="post" action="#">
-          <div class="row gtr-uniform gtr-50">
-            <div class="col-6 col-12-xsmall">
-              <input
-                type="text"
-                name="name"
-                id="name"
-                value=""
-                placeholder="Name"
-              />
-            </div>
-            <div class="col-6 col-12-xsmall">
-              <input
-                type="email"
-                name="email"
-                id="email"
-                value=""
-                placeholder="Email"
-              />
-            </div>
-            <div class="col-6 col-12-medium">
-              <input type="checkbox" id="copy" name="copy" />
-              <label for="copy">Email me a copy of this message</label>
-            </div>
-            <div class="col-6 col-12-medium">
-              <input type="checkbox" id="human" name="human" checked />
-              <label for="human">I am a human and not a robot</label>
-            </div>
-            <div class="col-12">
-              <textarea
-                name="message"
-                id="message"
-                placeholder="Please write a date and time."
-                rows="6"
-              ></textarea>
-            </div>
-            <div class="col-12">
-              <ul class="actions">
-                <li>
+          <section>
+            <h3>Form</h3>
+            <form method="post" action="#">
+              <div class="row gtr-uniform gtr-50">
+                <div class="col-6 col-12-xsmall">
                   <input
-                    type="submit"
-                    value="Send Message"
-                    class="primary disabled"
+                    type="text"
+                    name="name"
+                    id="name"
+                    value=""
+                    placeholder="Name"
                   />
-                </li>
-                <li><input type="reset" value="Reset" /></li>
-              </ul>
-            </div>
-          </div>
-        </form>
+                </div>
+                <div class="col-6 col-12-xsmall">
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    value=""
+                    placeholder="Email"
+                  />
+                </div>
+                <div class="col-6 col-12-medium">
+                  <input type="checkbox" id="copy" name="copy" />
+                  <label for="copy">Email me a copy of this message</label>
+                </div>
+                <div class="col-6 col-12-medium">
+                  <input type="checkbox" id="human" name="human" checked />
+                  <label for="human">I am a human and not a robot</label>
+                </div>
+                <div class="col-12">
+                  <textarea
+                    name="message"
+                    id="message"
+                    placeholder="Please write a date and time."
+                    rows="6"
+                  ></textarea>
+                </div>
+                <div class="col-12">
+                  <ul class="actions">
+                    <li>
+                      <input
+                        type="submit"
+                        value="Send Message"
+                        class="primary disabled"
+                      />
+                    </li>
+                    <li><input type="reset" value="Reset" /></li>
+                  </ul>
+                </div>
+              </div>
+            </form>
+          </section>
+        </div>
       </div>
 
       <!-- Footer -->
